[FIX] Z-Index for popup DISMISS.

--- a/mm_web_app/styles/index.scss
+++ b/mm_web_app/styles/index.scss
@@ -18,7 +18,9 @@
     clear: both;
   }
 }
-
+.notification-bar{
+    z-index: 9999;
+}
 /* React Tags*/
 div.ReactTags__tags {
     position: relative;
